--- a/docs/src/components/HomepageFeatures/styles.module.css
+++ b/docs/src/components/HomepageFeatures/styles.module.css
@@ -9,11 +9,7 @@
 .features {
   position: relative;
   width: 100%;
-  min-height: 90vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  min-height: 80vh;
   margin-top: -2.5rem;
   overflow: visible;
   padding: 1rem;
@@ -21,7 +17,7 @@
 
 .sectionTitle {
   text-align: center;
-  margin-bottom: 3.6rem;
+  margin-bottom: 3.4rem;
   position: relative;
   z-index: 2;
 }
@@ -300,6 +296,18 @@
 /* Vertical line */
 .gridContainer::after {
   transform: translateX(-50%) translateY(-50%) rotate(90deg);
+}
+
+@media (min-width: 1526px) {
+  .features {
+    min-height: 50vh;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1525px) {
+  .features {
+    min-height: 60vh;
+  }
 }
 
 @media (max-width: 996px) {
