--- a/docs/src/components/HomepageFeatures/styles.module.css
+++ b/docs/src/components/HomepageFeatures/styles.module.css
@@ -299,17 +299,13 @@
 }
 
 @media (min-width: 1526px) {
-  /* .features {
-    min-height: 50vh;
-  } */
-
   .gridContainer {
-    max-width: 1600px;
     gap: 4rem;
   }
 
   .featureCard {
-    max-width: 600px;
+    max-width: 700px;
+    padding-bottom: 3rem;
   }
 
   .svgWrapper {
@@ -332,10 +328,6 @@
 }
 
 @media (min-width: 1200px) and (max-width: 1525px) {
-  /* .features {
-    min-height: 60vh;
-  } */
-
   .gridContainer {
     max-width: 1500px;
     gap: 3.5rem;
